created about us section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
             </div>
         </div>
     </section>
+    <section id="about-us">
+        <div class="container">
+            <div class="row no-gutters" id="about-banner">
+                <div class="col d-flex justify-content-center align-items-center justify-content-lg-end">
+                    <h1 class="d-flex">ABOUT US</h1>
+                </div>
+            </div>
+            <div class="row no-gutters">
+                <div class="col-sm-12 col-lg-7"><img src="/assets/img/brain-1710293_1280.png" id="brain-pic"></div>
+                <div class="col-lg-4">
+                    <blockquote class="blockquote" id="about-text">
+                        <p class="mb-0">We developed a pill which depending upon active ingredient concentration can reduce a persons IQ permanently. We have minus 10, minus 30 and strongest minus 50. But why should I consider lowering it you might ask, because life
+                            is easier and the world is much happier place when you're dumb. Wouldn't you like that?</p>
+                        <footer class="blockquote-footer">Cornelius Grouppe</footer>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row no-gutters text-center">
+                <div class="col"><a href="#products-page"><i class="fa fa-chevron-down bounce animated infinite arrow"></i></a></div>
+            </div>
+        </div>
+    </section>
     
 
     <!-- Optional JavaScript -->
