created products and edited readme.md file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="row no-gutters" id="about-banner">
                 <div class="col d-flex justify-content-center align-items-center justify-content-lg-end">
-                    <h1 class="d-flex">ABOUT US</h1>
+                    <h1 id="about-heading" class="d-flex">ABOUT US</h1>
                 </div>
             </div>
             <div class="row no-gutters">
@@ -73,6 +73,24 @@
             </div>
         </div>
     </section>
+    <section id="products-page">
+    <div class="container" id="products">
+        <div class="row no-gutters" id="products-banner">
+            <div class="col d-flex justify-content-center align-items-center">
+                <h1 class="d-flex">PRODUCTS</h1><img src="./assets/img/tablete balta.svg" class="pill-pic" /><img src="./assets/img/tablete juoda.svg" class="pill-pic" /></div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ10</button></div>
+            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ30</button></div>
+            <div class="col-6 col-sm-6 col-md-4 offset-3 offset-sm-3 offset-md-0 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ50</button></div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row no-gutters text-center">
+            <div class="col"><a href="#faq-page"><i class="fa fa-chevron-down arrow2"></i></a></div>
+        </div>
+    </div>
+</section>
     
 
     <!-- Optional JavaScript -->
