created faq, reviews and footer

--- a/index.html
+++ b/index.html
@@ -90,7 +90,124 @@
             <div class="col"><a href="#faq-page"><i class="fa fa-chevron-down arrow2"></i></a></div>
         </div>
     </div>
-</section>
+    </section>
+    <section id="faq-page">
+        <div class="container text-center">
+            <div class="row no-gutters" id="faq-quote">
+                <div class="col">
+                    <p>“The world&#39;s a much brighter place when you&#39;re not too bright for it.”</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row d-flex">
+                <div class="col">
+                    <h1 class="text-center" id="faq-heading">FAQ</h1>
+                </div>
+            </div>
+        </div>
+        <div class="text-center" role="tablist" id="accordion-1">
+            <div class="card">
+                <div class="card-header" role="tab">
+                    <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-1" href="div#accordion-1 .item-1" class="faq-text">ls there any side effects?</a></h5>
+                </div>
+                <div class="collapse item-1" role="tabpanel" data-parent="#accordion-1">
+                    <div class="card-body">
+                        <p class="card-text p-red">Unfortunately there&#39;s one side effect: all those people you that you had no concern about will suddenly start to annoy you. People of other race or the sexual orientation, people with more money, basicaly anyone different from
+                        you.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" role="tab">
+                    <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-2" href="div#accordion-1 .item-2" class="faq-text">How to use it?</a></h5>
+                </div>
+                <div class="collapse item-2" role="tabpanel" data-parent="#accordion-1">
+                    <div class="card-body">
+                        <p class="card-text p-green">Press blinking button on the top of the website for PDF manual.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" role="tab">
+                    <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-3" href="div#accordion-1 .item-3" class="faq-text">Is it dangerous?</a></h5>
+                </div>
+                <div class="collapse item-3" role="tabpanel" data-parent="#accordion-1">
+                    <div class="card-body">
+                        <p class="card-text p-green">After taking this pill next morning you won&#39;t be the same anymore. Self awareness decency, A lack of confidence, even fear will cease to exist.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" role="tab">
+                    <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-4" href="div#accordion-1 .item-4" class="faq-text">How much IQ I should lower?</a></h5>
+                </div>
+                <div class="collapse item-4" role="tabpanel" data-parent="#accordion-1">
+                    <div class="card-body">
+                        <p class="card-text p-green">We recommend lowering your IQ to around 70.</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        <div class="col text-center"><a href="#reviews-page"><i class="fa fa-chevron-down arrow2"></i></a></div>
+    </section>
+    <section id="reviews-page">
+        <div class="container">
+            <div class="row no-gutters">
+                <div class="col">
+                    <h1 class="text-center" id="reviews-heading">REVIEWS</h1>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="card client">
+                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" />
+                            <blockquote class="blockquote">
+                                <p class="mb-0">What does it mean word review? Whaat?</p>
+                                <footer class="blockquote-footer">Someone famous</footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="card client">
+                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" />
+                            <blockquote class="blockquote">
+                                <p class="mb-0">It&#39;s a wonderful life... lalala...</p>
+                                <footer class="blockquote-footer">Overdosed customer</footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 mx-md-auto">
+                    <div class="card client">
+                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" />
+                            <blockquote class="blockquote">
+                                <p class="mb-0">I had a hard time arguing with stupid people. Now I don&#39;t have to.</p>
+                                <footer class="blockquote-footer">Satisfied customer</footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col text-center"><a href="#"><i class="fa fa-chevron-up arrow2"></i></a></div>
+    </section>
+    <footer>
+    <div class="d-flex justify-content-center align-items-center social"><a href="https://www.youtube.com/user/SleepthinkerFilms" target="_blank"><i class="icon ion-social-youtube-outline"></i></a><a href="http://www.sleepthinker.com/" target="_blank"><i class="icon ion-social-wordpress-outline"></i></a><a href="#"></a>
+        <a
+            href="https://www.facebook.com/Sleepthinker/" target="_blank"><i class="icon ion-social-facebook"></i></a>
+    </div>
+    <ul class="list-inline text-center">
+        <li class="list-inline-item"><a href="#">About</a></li>
+        <li class="list-inline-item"><a href="#">Products</a></li>
+        <li class="list-inline-item"><a href="#">FAQ</a></li>
+        <li class="list-inline-item"><a href="#">Reviews</a></li>
+    </ul>
+    <p class="text-center text-danger copyright">Sleepthinker © 2019</p>
+</footer>
     
 
     <!-- Optional JavaScript -->
