--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                 <div class="collapse navbar-collapse d-md-flex d-xl-flex justify-content-md-center align-items-md-center justify-content-xl-center align-items-xl-center"
                     id="navcol-1">
                     <ul class="nav navbar-nav d-md-flex">
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">About</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Products</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">FAQ</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Reviews</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#about-us">About</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#products-page">Products</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#faq-page">FAQ</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#reviews-page">Reviews</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="container d-flex justify-content-center align-items-center">
             <div class="row no-gutters d-sm-flex">
-                <div class="col"><iframe class="d-flex" width="560" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/z9pD_UK6vGU?controls=0&amp;showinfo=0&amp;rel=0"></iframe></div>
+                <div class="col"><iframe width="560" height="315" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/z9pD_UK6vGU?controls=0&amp;showinfo=0&amp;rel=0" class="d-flex"></iframe></div>
             </div>
         </div>
         <div class="container">
