--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <header>
             <div class="container">
                 <div class="row no-gutters">
-                    <div class="col-sm-12 col-md-9 col-lg-9 d-flex d-lg-flex justify-content-center align-items-center justify-content-md-start justify-content-lg-start justify-content-xl-start"><img src="/assets/img/logo1baltas.svg" id="logo"></div>
+                    <div class="col-sm-12 col-md-9 col-lg-9 d-flex d-lg-flex justify-content-center align-items-center justify-content-md-start justify-content-lg-start justify-content-xl-start"><img src="/assets/img/logo1baltas.svg" alt="logo" id="logo"></div>
                     <div class="col-4 col-sm-4 col-md-1 d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-end justify-content-lg-end align-items-lg-center justify-content-xl-end align-items-xl-center"><a href="https://www.facebook.com/Sleepthinker/" target="_blank" class="soc-ico"><i class="fa fa-facebook-square"></i></a></div>
                     <div class="col-4 col-sm-4 col-md-1 d-flex d-md-flex justify-content-center align-items-center justify-content-md-end justify-content-lg-end align-items-lg-center"><a href="https://www.youtube.com/user/SleepthinkerFilms" target="_blank" class="soc-ico"><i class="fa fa-youtube"></i></a></div>
-                    <div class="col-4 col-sm-4 col-md-1 d-flex d-md-flex justify-content-center align-items-center justify-content-md-end justify-content-lg-end align-items-lg-center"><a href="#" class="soc-ico"><i class="fa fa-download d-xl-flex" id="download-ico" style="color: #007bff;"></i></a></div>
+                    <div class="col-4 col-sm-4 col-md-1 d-flex d-md-flex justify-content-center align-items-center justify-content-md-end justify-content-lg-end align-items-lg-center"><a href="./assets/Instructions.pdf" target="_blank" class="soc-ico"><i class="fa fa-download d-xl-flex" id="download-ico" style="color: #007bff;"></i></a></div>
                 </div>
             </div>
         </header>
@@ -40,7 +40,7 @@
         </nav>
         <div class="container d-flex justify-content-center align-items-center">
             <div class="row no-gutters d-sm-flex">
-                <div class="col"><iframe width="560" height="315" allowfullscreen frameborder="0" src="https://www.youtube.com/embed/z9pD_UK6vGU?controls=0&amp;showinfo=0&amp;rel=0" class="d-flex"></iframe></div>
+                <div class="col"><iframe width="560" height="315" allowfullscreen src="https://www.youtube.com/embed/z9pD_UK6vGU?controls=0&amp;showinfo=0&amp;rel=0" class="d-flex"></iframe></div>
             </div>
         </div>
         <div class="container">
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="row no-gutters">
-                <div class="col-sm-12 col-lg-7"><img src="/assets/img/brain-1710293_1280.png" id="brain-pic"></div>
+                <div class="col-sm-12 col-lg-7"><img src="/assets/img/brain-1710293_1280.png" alt="brain_picture" id="brain-pic"></div>
                 <div class="col-lg-4">
                     <blockquote class="blockquote" id="about-text">
                         <p class="mb-0">We developed a pill which depending upon active ingredient concentration can reduce a persons IQ permanently. We have minus 10, minus 30 and strongest minus 50. But why should I consider lowering it you might ask, because life
@@ -69,7 +69,7 @@
         </div>
         <div class="container">
             <div class="row no-gutters text-center">
-                <div class="col"><a href="#products-page"><i class="fa fa-chevron-down bounce animated infinite arrow"></i></a></div>
+                <div class="col"><a href="#products-page"><i class="fa fa-chevron-down bounce animated arrow"></i></a></div>
             </div>
         </div>
     </section>
@@ -77,17 +77,17 @@
     <div class="container" id="products">
         <div class="row no-gutters" id="products-banner">
             <div class="col d-flex justify-content-center align-items-center">
-                <h1 class="d-flex">PRODUCTS</h1><img src="./assets/img/tablete balta.svg" class="pill-pic" /><img src="./assets/img/tablete juoda.svg" class="pill-pic" /></div>
+                <h1 id="products-banner-text" class="d-flex">PRODUCTS</h1><img src="./assets/img/tablete_balta.svg" alt="white_pill" class="pill-pic" /><img src="./assets/img/tablete_juoda.svg" alt="black_pill" class="pill-pic" /></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ10</button></div>
-            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ30</button></div>
-            <div class="col-6 col-sm-6 col-md-4 offset-3 offset-sm-3 offset-md-0 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ50</button></div>
+            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ10</button></div>
+            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ30</button></div>
+            <div class="col-6 col-sm-6 col-md-4 offset-3 offset-sm-3 offset-md-0 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ50</button></div>
         </div>
     </div>
     <div class="container">
         <div class="row no-gutters text-center">
-            <div class="col"><a href="#faq-page"><i class="fa fa-chevron-down arrow2"></i></a></div>
+            <div class="col"><a href="#faq-page"><i class="fa fa-chevron-down bounce animated arrow2"></i></a></div>
         </div>
     </div>
     </section>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             </div>
-        <div class="col text-center"><a href="#reviews-page"><i class="fa fa-chevron-down arrow2"></i></a></div>
+        <div class="col text-center"><a href="#reviews-page"><i class="fa fa-chevron-down bounce animated arrow2"></i></a></div>
     </section>
     <section id="reviews-page">
         <div class="container">
@@ -163,7 +163,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="card client">
-                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" />
+                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" alt="client_picture"/>
                             <blockquote class="blockquote">
                                 <p class="mb-0">What does it mean word review? Whaat?</p>
                                 <footer class="blockquote-footer">Someone famous</footer>
@@ -173,7 +173,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="card client">
-                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" />
+                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" alt="client_picture"/>
                             <blockquote class="blockquote">
                                 <p class="mb-0">It&#39;s a wonderful life... lalala...</p>
                                 <footer class="blockquote-footer">Overdosed customer</footer>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 mx-md-auto">
                     <div class="card client">
-                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" />
+                        <div class="card-body"><img class="d-none d-md-flex client-img" src="./assets/img/client-1295901_1280.png" alt="client_picture"/>
                             <blockquote class="blockquote">
                                 <p class="mb-0">I had a hard time arguing with stupid people. Now I don&#39;t have to.</p>
                                 <footer class="blockquote-footer">Satisfied customer</footer>
@@ -193,7 +193,7 @@
                 </div>
             </div>
         </div>
-        <div class="col text-center"><a href="#"><i class="fa fa-chevron-up arrow2"></i></a></div>
+        <div class="col text-center"><a href="#"><i class="fa fa-chevron-up bounce animated arrow2"></i></a></div>
     </section>
     <footer>
     <div class="d-flex justify-content-center align-items-center social"><a href="https://www.youtube.com/user/SleepthinkerFilms" target="_blank"><i class="icon ion-social-youtube-outline"></i></a><a href="http://www.sleepthinker.com/" target="_blank"><i class="icon ion-social-wordpress-outline"></i></a><a href="#"></a>
