fixed animation errors and runned test

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="container">
             <div class="row no-gutters text-center">
-                <div class="col"><a href="#about-us"><i class="fa fa-chevron-down bounce animated arrow"></i></a></div>
+                <div class="col"><a href="#about-us"><i class="fa fa-chevron-down bounce animated infinite arrow"></i></a></div>
             </div>
         </div>
     </section>
@@ -69,7 +69,7 @@
         </div>
         <div class="container">
             <div class="row no-gutters text-center">
-                <div class="col"><a href="#products-page"><i class="fa fa-chevron-down bounce animated arrow"></i></a></div>
+                <div class="col"><a href="#products-page"><i class="fa fa-chevron-down bounce animated infinite arrow"></i></a></div>
             </div>
         </div>
     </section>
@@ -87,7 +87,7 @@
     </div>
     <div class="container">
         <div class="row no-gutters text-center">
-            <div class="col"><a href="#faq-page"><i class="fa fa-chevron-down bounce animated arrow2"></i></a></div>
+            <div class="col"><a href="#faq-page"><i class="fa fa-chevron-down bounce animated infinite arrow2"></i></a></div>
         </div>
     </div>
     </section>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             </div>
-        <div class="col text-center"><a href="#reviews-page"><i class="fa fa-chevron-down bounce animated arrow2"></i></a></div>
+        <div class="col text-center"><a href="#reviews-page"><i class="fa fa-chevron-down bounce animated infinite arrow2"></i></a></div>
     </section>
     <section id="reviews-page">
         <div class="container">
@@ -193,7 +193,7 @@
                 </div>
             </div>
         </div>
-        <div class="col text-center"><a href="#"><i class="fa fa-chevron-up bounce animated arrow2"></i></a></div>
+        <div class="col text-center"><a href="#"><i class="fa fa-chevron-up bounce animated infinite arrow2"></i></a></div>
     </section>
     <footer>
     <div class="d-flex justify-content-center align-items-center social"><a href="https://www.youtube.com/user/SleepthinkerFilms" target="_blank"><i class="icon ion-social-youtube-outline"></i></a><a href="http://www.sleepthinker.com/" target="_blank"><i class="icon ion-social-wordpress-outline"></i></a><a href="#"></a>
