--- a/index.html
+++ b/index.html
@@ -14,6 +14,44 @@
     <title>Minus IQ</title>
   </head>
   <body>
+      <!--------------Modal------------>
+      <div class="modal fade modalis" id="MinusI10" role="dialog" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">MinusIQ-10</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button></div>
+                <div class="modal-body">
+                    <p>Lowers your IQ by 10 points, but don't worry it feels awesome.</p>
+                </div>
+                <div class="modal-footer"><button class="btn btn-danger" type="button" data-dismiss="modal">Close</button><a class="btn btn-info" role="button" href="http://www.sleepthinker.com/" target="_blank">More info</a></div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade modalis" id="MinusI30" role="dialog" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">MinusIQ-30</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button></div>
+                    <div class="modal-body">
+                        <p>Lowers your IQ by 30 points, but don't worry it feels amazing.</p>
+                    </div>
+                    <div class="modal-footer"><button class="btn btn-danger" type="button" data-dismiss="modal">Close</button><a class="btn btn-info" role="button" href="http://www.sleepthinker.com/" target="_blank">More info</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade modalis" id="MinusI50" role="dialog" tabindex="-1">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">MinusIQ-50</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button></div>
+                        <div class="modal-body">
+                            <p>Lowers your IQ by 50 points, but don't worry it feels astonishing.</p>
+                        </div>
+                        <div class="modal-footer"><button class="btn btn-danger" type="button" data-dismiss="modal">Close</button><a class="btn btn-info" role="button" href="http://www.sleepthinker.com/" target="_blank">More info</a></div>
+                    </div>
+                </div>
+            </div>
+      <!--------------End of modal------------>
     <section id="first-page">
         <header>
             <div class="container">
@@ -80,9 +118,9 @@
                 <h1 id="products-banner-text" class="d-flex">PRODUCTS</h1><img src="./assets/img/tablete_balta.svg" alt="white_pill" class="pill-pic" /><img src="./assets/img/tablete_juoda.svg" alt="black_pill" class="pill-pic" /></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ10</button></div>
-            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ30</button></div>
-            <div class="col-6 col-sm-6 col-md-4 offset-3 offset-sm-3 offset-md-0 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button">MinusIQ50</button></div>
+            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#MinusI10">MinusIQ10</button></div>
+            <div class="col-6 col-sm-6 col-md-4 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#MinusI30">MinusIQ30</button></div>
+            <div class="col-6 col-sm-6 col-md-4 offset-3 offset-sm-3 offset-md-0 d-flex flex-column justify-content-center align-items-center"><img src="./assets/img/medicine.png" alt="medicine_bottle" class="drug-icon" /><button class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#MinusI50">MinusIQ50</button></div>
         </div>
     </div>
     <div class="container">
