--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Minus IQ</title>
   </head>
   <body>
-      <!--------------Modal------------>
+      <!-- Modal -->
       <div class="modal fade modalis" id="MinusI10" role="dialog" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-      <!--------------End of modal------------>
+      <!-- End of modal -->
     <section id="first-page">
         <header>
             <div class="container">
@@ -76,6 +76,7 @@
                 </div>
             </div>
         </nav>
+      <main>
         <div class="container d-flex justify-content-center align-items-center">
             <div class="row no-gutters d-sm-flex">
                 <div class="col"><iframe width="560" height="315" allowfullscreen src="https://www.youtube.com/embed/z9pD_UK6vGU?controls=0&amp;showinfo=0&amp;rel=0" class="d-flex"></iframe></div>
@@ -86,6 +87,7 @@
                 <div class="col"><a href="#about-us"><i class="fa fa-chevron-down bounce animated infinite arrow"></i></a></div>
             </div>
         </div>
+      </main>
     </section>
     <section id="about-us">
         <div class="container">
@@ -97,11 +99,13 @@
             <div class="row no-gutters">
                 <div class="col-sm-12 col-lg-7"><img src="/assets/img/brain-1710293_1280.png" alt="brain_picture" id="brain-pic"></div>
                 <div class="col-lg-4">
+                  <article>
                     <blockquote class="blockquote" id="about-text">
                         <p class="mb-0">We developed a pill which depending upon active ingredient concentration can reduce a persons IQ permanently. We have minus 10, minus 30 and strongest minus 50. But why should I consider lowering it you might ask, because life
                             is easier and the world is much happier place when you're dumb. Wouldn't you like that?</p>
                         <footer class="blockquote-footer">Cornelius Grouppe</footer>
                     </blockquote>
+                  </article>
                 </div>
             </div>
         </div>
