--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <header>
             <div class="container">
                 <div class="row no-gutters">
-                    <div class="col-sm-12 col-md-9 col-lg-9 d-flex d-lg-flex justify-content-center align-items-center justify-content-md-start justify-content-lg-start justify-content-xl-start"><img src="/assets/img/logo1baltas.svg" alt="logo" id="logo"></div>
+                    <div class="col-sm-12 col-md-9 col-lg-9 d-flex d-lg-flex justify-content-center align-items-center justify-content-md-start justify-content-lg-start justify-content-xl-start"><img src="./assets/img/logo1baltas.svg" alt="logo" id="logo"></div>
                     <div class="col-4 col-sm-4 col-md-1 d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-end justify-content-lg-end align-items-lg-center justify-content-xl-end align-items-xl-center"><a href="https://www.facebook.com/Sleepthinker/" target="_blank" class="soc-ico"><i class="fa fa-facebook-square"></i></a></div>
                     <div class="col-4 col-sm-4 col-md-1 d-flex d-md-flex justify-content-center align-items-center justify-content-md-end justify-content-lg-end align-items-lg-center"><a href="https://www.youtube.com/user/SleepthinkerFilms" target="_blank" class="soc-ico"><i class="fa fa-youtube"></i></a></div>
                     <div class="col-4 col-sm-4 col-md-1 d-flex d-md-flex justify-content-center align-items-center justify-content-md-end justify-content-lg-end align-items-lg-center"><a href="./assets/Instructions.pdf" target="_blank" class="soc-ico"><i class="fa fa-download d-xl-flex" id="download-ico" style="color: #007bff;"></i></a></div>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="row no-gutters">
-                <div class="col-sm-12 col-lg-7"><img src="/assets/img/brain-1710293_1280.png" alt="brain_picture" id="brain-pic"></div>
+                <div class="col-sm-12 col-lg-7"><img src="./assets/img/brain-1710293_1280.png" alt="brain_picture" id="brain-pic"></div>
                 <div class="col-lg-4">
                   <article>
                     <blockquote class="blockquote" id="about-text">
